# scrape-changes

./: .gitignore  README.md  scrape-changes.cabal  shell.nix  stack.yaml
scrape-changes/: scrape-changes.cabal
scrape-changes-examples/: examples.hs  scrape-changes-examples.cabal
scrape-changes/src/Network/: ScrapeChanges.hs
scrape-changes/src/Network/ScrapeChanges/: Domain.hs  Internal.hs
scrape-changes/test/: TestMain.hs
scrape-changes/test/Network/ScrapeChanges/Internal/: Test.hs
src/Network/: ScrapeChanges.hs
src/Network/ScrapeChanges/: Domain.hs  Internal.hs
src/Network/ScrapeChanges/Internal/: Domain.hs
test/Network/ScrapeChanges/Internal/: Test.hs
