name:                scrape-changes
version:             0.1.0.0
synopsis:            Scrapes websites for changes and notifies the user when there are any (e.g by sending an email)
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Matthias Herrmann
maintainer:          matthias.mh.herrmann@googlemail.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Network.ScrapeChanges
  other-modules:       
  other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , validation >=0.5.1 && < 0.6
                     , lens >=4.12 && <4.14
                      --,mime-mail >= 0.4 && < 0.5
                     , network-uri >=2.6.0.3 && < 2.6.1
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite scrapechanges-tests
  type:              exitcode-stdio-1.0
  other-modules:     Network.ScrapeChanges.Internal.Test
  hs-source-dirs:    test src
  main-is:           TestMain.hs
  build-depends:     base >=4.8 && <4.9
                   , validation >=0.5.1 && < 0.6 
                   , QuickCheck >= 2.0
                   , test-framework
                   , test-framework-quickcheck2
                   , test-framework-hunit
                   , HUnit
                   , scrape-changes
                   , lens
                   , validation
                   , network-uri >=2.6.0.3 && < 2.6.1
  default-language:  Haskell2010
