name:                scrape-changes
version:             0.1.0.0
synopsis:            Scrape websites for changes
description:         This library scrapes websites and invokes callbacks when there are changes, similar to a RSS reader.
                     Sending an email by invoking sendmail is a built-in callback mechanism. Of course, users can provide 
                     their own callback function in addition.
license:             GPL-3
license-file:        LICENSE
author:              Matthias Herrmann
maintainer:          matthias.mh.herrmann@googlemail.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.14

library
  exposed-modules:     Network.ScrapeChanges 
  other-modules:       
  other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , validation >=0.5.1 && < 0.6
                     , lens >=4.12 && <4.14
                     , mime-mail >= 0.4 && < 0.5
                     , network-uri >=2.6.0.3 && < 2.6.1
                     , email-validate >= 2.0 && < 2.2
                     , semigroups >= 0.18
                     , cron >= 0.3.2
                     , attoparsec >= 0.13.0
                     , wreq >= 0.4.0.0
                     , hashable >= 1.2.3.3
                     , directory >= 1.2.2.0
                     , filepath >= 1.4.0.0
                     , async >= 2.0.2
                     , bytestring >= 0.10
                     , hslogger >= 1.2.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite scrapechanges-tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test src
  main-is:           TestMain.hs
  build-depends:     base >=4.8 && <4.9
                   , QuickCheck >=2.0
                   , test-framework >=0.1.0
                   , test-framework-quickcheck2 >=0.3.0.3
                   , test-framework-hunit >= 0.3.0.2
                   , HUnit >= 1.2.5.2
                   -- !! copied from the library build-depends
                   -- This way we don't have to expose internal modules
                   , validation >=0.5.1 && < 0.6
                   , lens >=4.12 && <4.14
                   , mime-mail >= 0.4 && < 0.5
                   , network-uri >=2.6.0.3 && < 2.6.1
                   , email-validate >= 2.0 && < 2.2
                   , semigroups >= 0.18
                   , cron >= 0.3.2
                   , attoparsec >= 0.13.0
                   , wreq >= 0.4.0.0
                   , hashable >= 1.2.3.3
                   , directory >= 1.2.2.0
                   , filepath >= 1.4.0.0
                   , async >= 2.0.2
                   , bytestring >= 0.10
                   , hslogger >= 1.2.9
  default-language:  Haskell2010

source-repository head
  type:           git
  location:       https://github.com/2chilled/scrape-changes
